Move ManagerBase to new Lifecycle/MBean implementation Fix a bunch of Eclipse/FindBugs warnings
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@940660 13f79535-47bb-0310-9956-ffa450edef68